# Vicarious_somatotopy

./: .gitignore  LICENSE  README.md  setup.cfg
config/: config.yml  config_LL.yml  config_T.yml  config_UL.yml  config_face.yml  plot_config.yml
notebooks/: 1. HCP Fitting.ipynb  2 Aggregate Plot.ipynb
notebooks/revised/: Cluster Analyses.ipynb  Field Based Model Comparison.ipynb  Individual Tuning.ipynb  Post Central Region.ipynb  Sampling Extent.ipynb
vicsompy/: aggregate.py  modeling.py  subject.py  surface.py  utils.py  vis.py
