[metadata]
name = vicsompy
author = Nicholas Hedger
version = 0.1
[options]
packages = find:
install_requires =
    requests
    nibabel
    pyyaml
    himalaya==0.3.5
    cifti==1.1
    torch==2.1.1
    numpy==1.26.2
    tqdm
    scikit-learn==1.3.2
    matplotlib==3.8.2
    pycortex
    mne==1.9.0
